restful optimization