@@ -1,38 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.7.4</version>
-      <relativePath /> <!-- lookup parent from repository -->
+      <version>3.1.0</version>
+      <relativePath/> <!-- lookup parent from repository -->
    </parent>
-
-   <groupId>com.example</groupId>
-   <artifactId>easyweb</artifactId>
+   <groupId>llph</groupId>
+   <artifactId>webtest</artifactId>
    <version>0.0.1</version>
    <packaging>war</packaging>
-   <name>easyweb</name>
-   <description>Web project for Spring Boot</description>
-
+   <name>webtest</name>
+   <description>Demo project for Spring Boot</description>
    <properties>
-      <java.version>1.8</java.version>
+      <java.version>17</java.version>
    </properties>
-
    <dependencies>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-data-jdbc</artifactId>
       </dependency>
-
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-integration</artifactId>
+      </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-jdbc</artifactId>
       </dependency>
-
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.integration</groupId>
+         <artifactId>spring-integration-http</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>org.springframework.integration</groupId>
+         <artifactId>spring-integration-jdbc</artifactId>
       </dependency>
 
       <dependency>
@@ -40,43 +48,23 @@
          <artifactId>mariadb-java-client</artifactId>
          <scope>runtime</scope>
       </dependency>
-      <!--dependency>
-         <groupId>org.postgresql</groupId>
-         <artifactId>postgresql</artifactId>
-         <version>42.2.25</version>
-      </dependency-->
-      
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-tomcat</artifactId>
          <scope>provided</scope>
       </dependency>
-
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-test</artifactId>
          <scope>test</scope>
       </dependency>
-
       <dependency>
-         <groupId>org.apache.commons</groupId>
-         <artifactId>commons-collections4</artifactId>
-         <version>4.4</version>
+         <groupId>org.springframework.integration</groupId>
+         <artifactId>spring-integration-test</artifactId>
+         <scope>test</scope>
       </dependency>
-
-
-      <dependency>
-         <groupId>org.apache.commons</groupId>
-         <artifactId>commons-compress</artifactId>
-         <version>1.21</version>
-      </dependency>
-
-      <dependency>
-         <groupId>commons-logging</groupId>
-         <artifactId>commons-logging</artifactId>
-         <version>1.2</version>
-      </dependency>
-
+      
+      
       <dependency>
          <groupId>org.apache.poi</groupId>
          <artifactId>poi</artifactId>
@@ -100,27 +88,13 @@
          <artifactId>xmlbeans</artifactId>
          <version>5.0.3</version>
       </dependency>
-
    </dependencies>
-
 
    <build>
       <plugins>
          <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
-         </plugin>
-         <plugin>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-               <useSystemClassLoader>false</useSystemClassLoader>
-               <forkCount>0</forkCount>
-               <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-               <systemPropertyVariables>
-                  <useSystemClassLoader>false</useSystemClassLoader>
-                  <concordion.output.dir>target/concordion</concordion.output.dir>
-               </systemPropertyVariables>
-            </configuration>
          </plugin>
       </plugins>
    </build>
